--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
 	text-align: center;
 }
 
@@ -35,4 +35,33 @@
 	to {
 		transform: rotate(360deg);
 	}
+} */
+
+.logo-image {
+	width: 50px;
+}
+
+.default-layout {
+	display: grid;
+	grid-template-rows: 80px auto 3rem;
+	grid-template-areas:
+		"header"
+		"main"
+		"footer";
+}
+
+header {
+	grid-area: header;
+}
+
+main {
+	grid-area: main;
+	min-height: 88vh;
+}
+
+footer {
+	grid-area: footer;
+	background: black;
+	padding: 1rem;
+	color: white;
 }
