--- a/src/pages/entry/entry.css
+++ b/src/pages/entry/entry.css
@@ -7,6 +7,8 @@
 
 .form-box {
 	box-shadow: 0px 0px 15px -5px black;
+	border-radius: 0.25rem;
+	padding: 30px 20px 10px 20px;
 }
 
 .pass-top-spacing {
